fix preview on small screens

--- a/web-ui/src/components/questions/questions.less
+++ b/web-ui/src/components/questions/questions.less
@@ -12,6 +12,12 @@
 .preview_container {
   padding-left: 20px;
   padding-right: 20px;
+
+  @media (max-width: 500px) {
+    margin: 10px;
+    width: 200px;
+    padding: 0;
+  }
 }
 
 .divider {
